--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <img class=avatar src=img/me.png>
 
               <div class=minibio>
-                <span>Drops by LeD</span><br/>I do Product design (UX & UI), Design thinking, Service design, Art Direction, Infographics, Animation, Illustration and good coffee. Follow the links below to know more about me and my work.</br>
+                <span>Estudio Drops</span><br/>Design studio by LΞD.<br/><br/>I do design, animation, illustration and good coffee.</br></br>
                 <a class="button" href="http://portfolio.estudiodrops.com.br">PORTFOLIO</a>
                 <a class="secondary-button" href="files/resume.pdf">RESUME (PDF)</a>
               </div>
