Added dropsandbits link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
               <img class=avatar src=img/me.png>
 
               <div class=minibio>
-                <span>Estudio Drops</span><br/>Design studio by LΞD.<br/><br/>I do design, animation, illustration and good coffee.</br></br>
+                <span>Estudio Drops</span><br/>Design studio by LΞD.<br/><br/>I do design, animation, illustration and good coffee.</br>
+                For some personal work, visit <a href="http://dropsandbits.com">dropsandbits.com</a></br></br>
                 <a class="button" href="http://portfolio.estudiodrops.com.br">PORTFOLIO</a>
                 <a class="secondary-button" href="files/resume.pdf">RESUME (PDF)</a>
               </div>
