--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <div class=ink>
             <div class=iconrow>
 
-              <div class=ico-dribbble>
-                <a href="https://dribbble.com/dropsandbits"><img class=bitmap src=img/dribbble.png></a>
+              <div class=ico-instagram>
+                <a href="https://www.instagram.com/estudiodrops/"><img class=bitmap src=img/instagram.png></a>
               </div>
 
               <div class=ico-behance>
@@ -42,13 +42,13 @@
                 <a href="https://www.linkedin.com/in/leandrodandrea/"><img class=bitmap src=img/linkedin.png></a>
               </div>
 
-              <div class=ico-instagram>
-                <a href="https://www.instagram.com/estudiodrops/"><img class=bitmap src=img/instagram.png></a>
+              <div class=ico-portfolio>
+                <a href="http://portfolio.estudiodrops.com.br"><img class=bitmap src=img/portfolio.png></a>
               </div>
 
             </div>
 
-              <img class=avatar src=img/me.png>
+              <img class=avatar src=img/logo.png>
 
               <div class=minibio>
                 <span>Estudio Drops</span><br/>Design studio by LΞD.<br/><br/>I do design, animation, illustration and good coffee.</br>
