--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" type="text/css" href="css/drops.css">
     <meta name=author content="Leandro D'Andrea">
     <meta name="keywords" content="design, ux, ui, userexperience, experience, illustration, animation, designer, illustrator, animator, infographic, data visualization, data visualisation, icon design, icons, logo design, logos, layouts, interface, app, webpage, website, studio, drops, leandro, dandrea, portfolio, cv">
-    <meta name="p:domain_verify" content="8c1cf8e9cc0ee4904a3b4b292fd34ba3"/>
     </head>
     <body>
       <div class=drops>
@@ -31,19 +30,19 @@
             <div class=iconrow>
 
               <div class=ico-instagram>
-                <a href="https://www.instagram.com/estudiodrops/"><img class=bitmap src=img/instagram.png></a>
+                <a href="https://www.instagram.com/estudiodrops/" alt="Go to Instagram"><img class=bitmap src=img/instagram.png alt="Instagram logo"></a>
               </div>
 
               <div class=ico-behance>
-                <a href="https://www.behance.net/dropsandbits"><img class=bitmap src=img/behance.png></a>
+                <a href="https://www.behance.net/dropsandbits" alt="Go to Behance"><img class=bitmap src=img/behance.png alt="Behance logo"></a>
               </div>
 
               <div class=ico-linkedin>
-                <a href="https://www.linkedin.com/in/leandrodandrea/"><img class=bitmap src=img/linkedin.png></a>
+                <a href="https://www.linkedin.com/in/leandrodandrea/" alt="Go to Linkedin"><img class=bitmap src=img/linkedin.png alt="Linkedin logo"></a>
               </div>
 
               <div class=ico-portfolio>
-                <a href="http://portfolio.estudiodrops.com.br"><img class=bitmap src=img/portfolio.png></a>
+                <a href="http://portfolio.estudiodrops.com.br" alt="Open portfolio"><img class=bitmap src=img/portfolio.png alt="Portfolio icon"></a>
               </div>
 
             </div>
