--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 <span>Estudio Drops</span><br/>Design studio by LΞD.<br/><br/>I do design, animation, illustration and good coffee.</br>
                 For some personal work, visit <a href="http://dropsandbits.com" target="_blank">dropsandbits.com</a></br></br>
                 <a class="button" href="http://portfolio.estudiodrops.com.br">PORTFOLIO</a>
-                <a class="secondary-button" href="files/resume.pdf">RESUME (PDF)</a>
+                <a class="secondary-button" href="https://www.figma.com/proto/JRdIkLj7EsOzmoGtJ7TlQx/Case-Studies?page-id=0%3A1&node-id=2%3A1620&starting-point-node-id=2%3A1620&scaling=scale-down">FIGMA - CASE STUDIES</a>
+                <a class="simplelink" href="files/CVDark.pdf">VIEW CV IN PDF</a>
               </div>
 
           </div>
